<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#166"
    tools:context="edu.auburn.respectedprocess.revolvingfour.edu.auburn.eng.csse.comp3710.spring2018.respectedprocess.revolvingfour.SplashActivity"
    tools:showIn="@layout/activity_splash">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="78dp">
    </android.support.v4.widget.Space>

    <ImageView
        android:id="@+id/logo"
        android:layout_gravity="center"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:src="@drawable/placeholder">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/splashtext1"
        android:textSize="45sp"
        android:textColor="@color/Black"
        android:fontFamily="sans-serif-medium"/>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/splashtext2"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/splashtext3"/>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/splashtext4"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/splashtext5"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/splashtext6"/>


</LinearLayout>
