<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context="edu.auburn.respectedprocess.revolvingfour.edu.auburn.eng.csse.comp3710.spring2018.respectedprocess.revolvingfour.RotationFragment">

    <Button
        android:id="@+id/rotateleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_left" />

    <Button
        android:id="@+id/rotate180"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_180" />

    <Button
        android:id="@+id/rotateright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_right" />


</LinearLayout>
